# deeplocalizer_models

./: CMakeLists.txt  README.md
models/conv12_conv48_fc1024_fc_2/: deploy.prototxt  solver.prototxt  train_val.prototxt
models/season2015_conv16_conv48_fc1024_fc_2/: deploy.prototxt
models/season2015_conv16_conv48_fc1024_fc_2_100x100/: deploy.prototxt  solver.prototxt  train_val.prototxt
models/season2015_mxnet_vgg_100x100/: filternet-0020.params  filternet-symbol.json
